working next hop

--- a/isp/P1-BR/p1-br_bgp.conf
+++ b/isp/P1-BR/p1-br_bgp.conf
@@ -3,28 +3,67 @@ debug bgp zebra
 debug bgp neighbor-events
 !
 router bgp 65005
-  bgp router-id 20.20.0.2  
+  bgp router-id 20.20.0.2
   no bgp default ipv4-unicast
+!
+!	eBGP
+!
   neighbor fde4::1 remote-as 64512
-  neighbor fde4::1 next-hop-self    
-  neighbor fde4::1:dead remote-as 65001
-  neighbor fde4::1:dead next-hop-self    
-  neighbor fde4::6:deaf remote-as 65006
-  neighbor fde4::6:deaf next-hop-self    
-  neighbor fde4::4:beef remote-as 65004
-  neighbor fde4::4:beef next-hop-self    
-  neighbor fde4::7:face remote-as 65007
-  neighbor fde4::7:face next-hop-self    
- neighbor fde4:5:21::3 remote-as 65005
- neighbor fde4:5:21::3 update-source lo
-  !
   address-family ipv6 unicast
     network fde4:5::/32
     neighbor fde4::1 activate
-    neighbor fde4::1:dead activate
-    neighbor fde4::6:deaf activate
-    neighbor fde4::4:beef activate
-    neighbor fde4::7:face activate
-    neighbor fde4:5:21::3 activate
+    neighbor fde4::1 route-map set-nexthop in
   exit-address-family
+
+  neighbor fde4::1:dead remote-as 65001
+  address-family ipv6 unicast
+    network fde4:5::/32
+    neighbor fde4::1:dead activate
+    neighbor fde4::1:dead route-map set-nexthop in
+    neighbor fde4::1:dead password ASes6500165005
+  exit-address-family
+
+  neighbor fde4::4:beef remote-as 65004
+  address-family ipv6 unicast
+    network fde4:5::/32
+    neighbor fde4::4:beef activate
+    neighbor fde4::4:beef route-map set-nexthop in
+  exit-address-family
+
+  neighbor fde4::7:face remote-as 65007
+  address-family ipv6 unicast
+    network fde4:5::/32
+    neighbor fde4::7:face activate
+    neighbor fde4::7:face route-map set-nexthop in
+  exit-address-family
+
+
+
+
+!
+!	iBGP
+!
+  bgp route-reflector allow-outbound-policy
+  !
+  neighbor fde4:5:2100::0003 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2100::0003 activate
+    neighbor fde4:5:2100::0003 update-source lo
+  exit-address-family
+
+  !
+  neighbor fde4:5:2100::0004 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2100::0004 activate
+    neighbor fde4:5:2100::0004 update-source lo
+  exit-address-family
+
+  !
+
+  
+  route-map set-nexthop permit 10
+   set ipv6 next-hop global fde4:5:2100::0001
+   set ipv6 next-hop prefer global   
+
+ 
 !
