--- a/isp/P1-BR/p1-br_ospf.conf
+++ b/isp/P1-BR/p1-br_ospf.conf
@@ -24,6 +24,26 @@ interface P1-BR-eth2
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
+interface styx
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 passive
+    ipv6 ospf6 instance-id 0
+!
+interface lethe
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 passive
+    ipv6 ospf6 instance-id 0
+!
+interface celadon
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 passive
+    ipv6 ospf6 instance-id 0
+!
+interface kerlaugar
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 passive
+    ipv6 ospf6 instance-id 0
+!
 interface lo
     ipv6 ospf6 cost 5
     ipv6 ospf6 hello-interval 40
