--- a/isp/P4-BR/p4-br_bgp.conf
+++ b/isp/P4-BR/p4-br_bgp.conf
@@ -3,17 +3,48 @@ debug bgp zebra
 debug bgp neighbor-events
 !
 router bgp 65005
-  bgp router-id 20.20.0.5  
+  bgp router-id 20.20.0.5
   no bgp default ipv4-unicast
- neighbor fde4:5:21::3 remote-as 65005
- neighbor fde4:5:21::3 update-source lo
- neighbor fde4:5:21::3 route-reflector-client
- neighbor fde4:5:21::2 remote-as 65005
- neighbor fde4:5:21::2 update-source lo
- neighbor fde4:5:21::2 route-reflector-client
+!
+!	eBGP
+!
+
+
+
+!
+!	iBGP
+!
+  bgp route-reflector allow-outbound-policy
   !
+  neighbor fde4:5:2100::0003 remote-as 65005
   address-family ipv6 unicast
-    neighbor fde4:5:21::3 activate
-    neighbor fde4:5:21::2 activate
+    neighbor fde4:5:2100::0003 activate
+    neighbor fde4:5:2100::0003 route-reflector-client
+    neighbor fde4:5:2100::0003 update-source lo
   exit-address-family
+
+  !
+  neighbor fde4:5:2100::0001 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2100::0001 activate
+    neighbor fde4:5:2100::0001 route-reflector-client
+    neighbor fde4:5:2100::0001 update-source lo
+  exit-address-family
+
+  !
+  neighbor fde4:5:2100::0002 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2100::0002 activate
+    neighbor fde4:5:2100::0002 route-reflector-client
+    neighbor fde4:5:2100::0002 update-source lo
+  exit-address-family
+
+  !
+
+  
+  route-map set-nexthop permit 10
+   set ipv6 next-hop global fde4:5:2100::0004
+   set ipv6 next-hop prefer global   
+
+ 
 !
