--- a/isp/P2-BR/p2-br_bgp.conf
+++ b/isp/P2-BR/p2-br_bgp.conf
@@ -3,12 +3,38 @@ debug bgp zebra
 debug bgp neighbor-events
 !
 router bgp 65005
-  bgp router-id 20.20.0.3  
+  bgp router-id 20.20.0.3
   no bgp default ipv4-unicast
- neighbor fde4:5:21::4 remote-as 65005
- neighbor fde4:5:21::4 update-source lo
+!
+!	eBGP
+!
+
+
+
+!
+!	iBGP
+!
+  bgp route-reflector allow-outbound-policy
   !
+  neighbor fde4:5:2100::0003 remote-as 65005
   address-family ipv6 unicast
-    neighbor fde4:5:21::4 activate
+    neighbor fde4:5:2100::0003 activate
+    neighbor fde4:5:2100::0003 update-source lo
   exit-address-family
+
+  !
+  neighbor fde4:5:2100::0004 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2100::0004 activate
+    neighbor fde4:5:2100::0004 update-source lo
+  exit-address-family
+
+  !
+
+  
+  route-map set-nexthop permit 10
+   set ipv6 next-hop global fde4:5:2100::0002
+   set ipv6 next-hop prefer global   
+
+ 
 !
