currently working with customers

--- a/isp/P1-BR/p1-br_bgp.conf
+++ b/isp/P1-BR/p1-br_bgp.conf
@@ -15,12 +15,19 @@ router bgp 65005
     neighbor fde4::1 route-map set-nexthop in
   exit-address-family
 
-  neighbor fde4::1:dead remote-as 65001
+  neighbor fde4:5:3000:1::1 remote-as 65001
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4::1:dead activate
-    neighbor fde4::1:dead route-map set-nexthop in
-    neighbor fde4::1:dead password ASes6500165005
+    neighbor fde4:5:3000:1::1 activate
+    neighbor fde4:5:3000:1::1 route-map set-nexthop in
+    neighbor fde4:5:3000:1::1 password ASes6500165005
+  exit-address-family
+
+  neighbor fde4::6:deaf remote-as 65006
+  address-family ipv6 unicast
+    network fde4:5::/32
+    neighbor fde4::6:deaf activate
+    neighbor fde4::6:deaf route-map set-nexthop in
   exit-address-family
 
   neighbor fde4::4:beef remote-as 65004
@@ -37,6 +44,13 @@ router bgp 65005
     neighbor fde4::7:face route-map set-nexthop in
   exit-address-family
 
+  neighbor fde4:5:1100::0071 remote-as 64513
+  address-family ipv6 unicast
+    network fde4:5::/32
+    neighbor fde4:5:1100::0071 activate
+    neighbor fde4:5:1100::0071 route-map set-nexthop in
+  exit-address-family
+
 
 
 
@@ -49,6 +63,9 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
+    !neighbor fde4:5:2100::0003 route-map set-nexthop out
+    !neighbor fde4:5:2100::0003 route-map set-nexthop in
+    neighbor fde4:5:2100::0003 password ihvxuusysp
   exit-address-family
 
   !
@@ -56,6 +73,9 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
+    !neighbor fde4:5:2100::0004 route-map set-nexthop out
+    !neighbor fde4:5:2100::0004 route-map set-nexthop in
+    neighbor fde4:5:2100::0004 password jbadxzfoax
   exit-address-family
 
   !
