--- a/isp/P1-BR/p1-br_zebra.conf
+++ b/isp/P1-BR/p1-br_zebra.conf
@@ -20,16 +20,28 @@ interface P1-BR-eth1
 interface P1-BR-eth2
  description Link to P4-BR
 !
+interface P1-BR-eth3
+ description Link to P5-AT
+!
+interface P1-BR-eth4
+ description Link to P7-EF
+!
 interface styx
  description eBGP Link to 64512
 !
 interface lethe
  description eBGP Link to 65001
 !
+interface rubicon
+ description eBGP Link to 65006
+!
 interface celadon
  description eBGP Link to 65004
 !
 interface kerlaugar
  description eBGP Link to 65007
+!
+interface P1-BR-eth5
+ description Link to ZCUST1--BR
 !
 
