--- a/isp/P2-BR/p2-br_bgp.conf
+++ b/isp/P2-BR/p2-br_bgp.conf
@@ -20,6 +20,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
+    neighbor fde4:5:2100::0003 password pdioroqtie
   exit-address-family
 
   !
@@ -27,6 +28,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
+    neighbor fde4:5:2100::0004 password cfhwtnolsj
   exit-address-family
 
   !
