--- a/isp/P4-BR/p4-br_bgp.conf
+++ b/isp/P4-BR/p4-br_bgp.conf
@@ -21,6 +21,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 route-reflector-client
     neighbor fde4:5:2100::0003 update-source lo
+    neighbor fde4:5:2100::0003 password idgxwqjetd
   exit-address-family
 
   !
@@ -29,6 +30,7 @@ router bgp 65005
     neighbor fde4:5:2100::0001 activate
     neighbor fde4:5:2100::0001 route-reflector-client
     neighbor fde4:5:2100::0001 update-source lo
+    neighbor fde4:5:2100::0001 password jbadxzfoax
   exit-address-family
 
   !
@@ -37,6 +39,43 @@ router bgp 65005
     neighbor fde4:5:2100::0002 activate
     neighbor fde4:5:2100::0002 route-reflector-client
     neighbor fde4:5:2100::0002 update-source lo
+    neighbor fde4:5:2100::0002 password cfhwtnolsj
+  exit-address-family
+
+  !
+  neighbor fde4:5:2200::0001 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2200::0001 activate
+    neighbor fde4:5:2200::0001 route-reflector-client
+    neighbor fde4:5:2200::0001 update-source lo
+    neighbor fde4:5:2200::0001 password awjyeotrit
+  exit-address-family
+
+  !
+  neighbor fde4:5:2200::0002 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2200::0002 activate
+    neighbor fde4:5:2200::0002 route-reflector-client
+    neighbor fde4:5:2200::0002 update-source lo
+    neighbor fde4:5:2200::0002 password ufxsfbamrr
+  exit-address-family
+
+  !
+  neighbor fde4:5:2300::0001 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2300::0001 activate
+    neighbor fde4:5:2300::0001 route-reflector-client
+    neighbor fde4:5:2300::0001 update-source lo
+    neighbor fde4:5:2300::0001 password easumgfkuv
+  exit-address-family
+
+  !
+  neighbor fde4:5:2300::0002 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2300::0002 activate
+    neighbor fde4:5:2300::0002 route-reflector-client
+    neighbor fde4:5:2300::0002 update-source lo
+    neighbor fde4:5:2300::0002 password fwiclcyqql
   exit-address-family
 
   !
