--- a/isp/P2-BR/p2-br_ospf.conf
+++ b/isp/P2-BR/p2-br_ospf.conf
@@ -10,18 +10,35 @@ interface P2-BR-eth0
     ipv6 ospf6 cost 5
     ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
     ipv6 ospf6 instance-id 0
 !
 interface P2-BR-eth1
     ipv6 ospf6 cost 5
     ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
     ipv6 ospf6 instance-id 0
 !
 interface P2-BR-eth2
     ipv6 ospf6 cost 5
     ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
+interface P2-BR-eth3
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
+interface P2-BR-eth4
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
     ipv6 ospf6 instance-id 0
 !
 interface lo
@@ -29,12 +46,16 @@ interface lo
     ipv6 ospf6 hello-interval 40
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
 !
 router ospf6
     ospf6 router-id 59.59.59.3
     interface P2-BR-eth0 area 0.0.0.0
     interface P2-BR-eth1 area 0.0.0.0
     interface P2-BR-eth2 area 0.0.0.0
+    interface P2-BR-eth3 area 0.0.0.0
+    interface P2-BR-eth4 area 0.0.0.0
     interface lo area 0.0.0.0
+    ipv6 ospf6 authentication message-digest
 !
 
