--- a/isp/P2-BR/p2-br_zebra.conf
+++ b/isp/P2-BR/p2-br_zebra.conf
@@ -20,4 +20,10 @@ interface P2-BR-eth1
 interface P2-BR-eth2
  description Link to P4-BR
 !
+interface P2-BR-eth3
+ description Link to P6-AT
+!
+interface P2-BR-eth4
+ description Link to P8-EF
+!
 
