--- a/isp/P3-BR/p3-br_bgp.conf
+++ b/isp/P3-BR/p3-br_bgp.conf
@@ -21,6 +21,7 @@ router bgp 65005
     neighbor fde4:5:2100::0001 activate
     neighbor fde4:5:2100::0001 route-reflector-client
     neighbor fde4:5:2100::0001 update-source lo
+    neighbor fde4:5:2100::0001 password ihvxuusysp
   exit-address-family
 
   !
@@ -29,6 +30,7 @@ router bgp 65005
     neighbor fde4:5:2100::0002 activate
     neighbor fde4:5:2100::0002 route-reflector-client
     neighbor fde4:5:2100::0002 update-source lo
+    neighbor fde4:5:2100::0002 password pdioroqtie
   exit-address-family
 
   !
@@ -37,6 +39,43 @@ router bgp 65005
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 route-reflector-client
     neighbor fde4:5:2100::0004 update-source lo
+    neighbor fde4:5:2100::0004 password idgxwqjetd
+  exit-address-family
+
+  !
+  neighbor fde4:5:2200::0001 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2200::0001 activate
+    neighbor fde4:5:2200::0001 route-reflector-client
+    neighbor fde4:5:2200::0001 update-source lo
+    neighbor fde4:5:2200::0001 password louiwrsuef
+  exit-address-family
+
+  !
+  neighbor fde4:5:2200::0002 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2200::0002 activate
+    neighbor fde4:5:2200::0002 route-reflector-client
+    neighbor fde4:5:2200::0002 update-source lo
+    neighbor fde4:5:2200::0002 password igswidbkrj
+  exit-address-family
+
+  !
+  neighbor fde4:5:2300::0001 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2300::0001 activate
+    neighbor fde4:5:2300::0001 route-reflector-client
+    neighbor fde4:5:2300::0001 update-source lo
+    neighbor fde4:5:2300::0001 password rfmslxxyvk
+  exit-address-family
+
+  !
+  neighbor fde4:5:2300::0002 remote-as 65005
+  address-family ipv6 unicast
+    neighbor fde4:5:2300::0002 activate
+    neighbor fde4:5:2300::0002 route-reflector-client
+    neighbor fde4:5:2300::0002 update-source lo
+    neighbor fde4:5:2300::0002 password ygicdfzjxd
   exit-address-family
 
   !
