--- a/isp/P1-BR/p1-br_zebra.conf
+++ b/isp/P1-BR/p1-br_zebra.conf
@@ -26,6 +26,18 @@ interface P1-BR-eth3
 interface P1-BR-eth4
  description Link to P7-EF
 !
+interface P1-BR-eth5
+ description Link to P9-FB
+!
+interface P1-BR-eth6
+ description Link to P11-LI
+!
+interface P1-BR-eth7
+ description Link to P13-WF
+!
+interface P1-BR-eth8
+ description Link to P15-LG
+!
 interface styx
  description eBGP Link to 64512
 !
@@ -41,7 +53,7 @@ interface celadon
 interface kerlaugar
  description eBGP Link to 65007
 !
-interface P1-BR-eth5
+interface P1-BR-eth9
  description Link to ZCUST1--BR
 !
 
