--- a/isp/P2-BR/p2-br_ospf.conf
+++ b/isp/P2-BR/p2-br_ospf.conf
@@ -41,6 +41,34 @@ interface P2-BR-eth4
     ipv6 ospf6 message-digest-key 1 md5 testPassword
     ipv6 ospf6 instance-id 0
 !
+interface P2-BR-eth5
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
+interface P2-BR-eth6
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
+interface P2-BR-eth7
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
+interface P2-BR-eth8
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 message-digest-key 1 md5 testPassword
+    ipv6 ospf6 instance-id 0
+!
 interface lo
     ipv6 ospf6 cost 5
     ipv6 ospf6 hello-interval 40
@@ -55,6 +83,10 @@ router ospf6
     interface P2-BR-eth2 area 0.0.0.0
     interface P2-BR-eth3 area 0.0.0.0
     interface P2-BR-eth4 area 0.0.0.0
+    interface P2-BR-eth5 area 0.0.0.0
+    interface P2-BR-eth6 area 0.0.0.0
+    interface P2-BR-eth7 area 0.0.0.0
+    interface P2-BR-eth8 area 0.0.0.0
     interface lo area 0.0.0.0
     ipv6 ospf6 authentication message-digest
 !
