--- a/isp/P2-BR/p2-br_zebra.conf
+++ b/isp/P2-BR/p2-br_zebra.conf
@@ -26,4 +26,16 @@ interface P2-BR-eth3
 interface P2-BR-eth4
  description Link to P8-EF
 !
+interface P2-BR-eth5
+ description Link to P10-FB
+!
+interface P2-BR-eth6
+ description Link to P12-LI
+!
+interface P2-BR-eth7
+ description Link to P14-WF
+!
+interface P2-BR-eth8
+ description Link to P16-LG
+!
 
