--- a/isp/P1-BR/p1-br_bgp.conf
+++ b/isp/P1-BR/p1-br_bgp.conf
@@ -2,15 +2,30 @@ log stdout
 debug bgp zebra
 debug bgp neighbor-events
 !
+ipv6 prefix-list ZCUST1--BR-eth0 seq 5 permit fde4:5:4000::/48 ge 48 le 56  
+
 router bgp 65005
   bgp router-id 20.20.0.2
   no bgp default ipv4-unicast
 !
 !	eBGP
 !
+
+ ipv6 prefix-list ours fde4:5::/32
   neighbor fde4::1 remote-as 64512
   address-family ipv6 unicast
     network fde4:5::/32
+    neighbor fde4::1 route-map allow-own out
+    neighbor fde4::1 route-map NO-EXPORT out
+    neighbor fde4::1 route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4::1 route-map rm-in-p in
+    neighbor fde4::1 route-map rm-out-sc-p-allow-own out
+    neighbor fde4::1 route-map rm-out-sc-p-allow-client out
+ 
+    neighbor fde4::1 send-community
     neighbor fde4::1 activate
     neighbor fde4::1 route-map set-nexthop in
   exit-address-family
@@ -18,6 +33,17 @@ router bgp 65005
   neighbor fde4:5:3000:1::1 remote-as 65001
   address-family ipv6 unicast
     network fde4:5::/32
+    neighbor fde4:5:3000:1::1 route-map allow-own out
+    neighbor fde4:5:3000:1::1 route-map NO-EXPORT out
+    neighbor fde4:5:3000:1::1 route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4:5:3000:1::1 route-map rm-in-sc in
+    neighbor fde4:5:3000:1::1 route-map rm-out-sc-p-allow-own out
+    neighbor fde4:5:3000:1::1 route-map rm-out-sc-p-allow-client out
+
+    neighbor fde4:5:3000:1::1 send-community
     neighbor fde4:5:3000:1::1 activate
     neighbor fde4:5:3000:1::1 route-map set-nexthop in
     neighbor fde4:5:3000:1::1 password ASes6500165005
@@ -26,20 +52,47 @@ router bgp 65005
   neighbor fde4::6:deaf remote-as 65006
   address-family ipv6 unicast
     network fde4:5::/32
+    neighbor fde4::6:deaf route-map allow-own out
+    neighbor fde4::6:deaf route-map NO-EXPORT out
+    neighbor fde4::6:deaf route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4::6:deaf route-map rm-in-p in
+    neighbor fde4::6:deaf route-map rm-out-sc-p-allow-own out
+    neighbor fde4::6:deaf route-map rm-out-sc-p-allow-client out
+ 
+    neighbor fde4::6:deaf send-community
     neighbor fde4::6:deaf activate
     neighbor fde4::6:deaf route-map set-nexthop in
   exit-address-family
 
-  neighbor fde4::4:beef remote-as 65004
+  neighbor fde4:4:f001:5::beef remote-as 65004
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4::4:beef activate
-    neighbor fde4::4:beef route-map set-nexthop in
+    neighbor fde4:4:f001:5::beef route-map allow-own out
+    neighbor fde4:4:f001:5::beef route-map NO-EXPORT out
+    neighbor fde4:4:f001:5::beef route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4:4:f001:5::beef route-map rm-in-c in
+    neighbor fde4:4:f001:5::beef send-community
+    neighbor fde4:4:f001:5::beef activate
+    neighbor fde4:4:f001:5::beef route-map set-nexthop in
   exit-address-family
 
   neighbor fde4::7:face remote-as 65007
   address-family ipv6 unicast
     network fde4:5::/32
+    neighbor fde4::7:face route-map allow-own out
+    neighbor fde4::7:face route-map NO-EXPORT out
+    neighbor fde4::7:face route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4::7:face route-map rm-in-cb in
+    neighbor fde4::7:face send-community
     neighbor fde4::7:face activate
     neighbor fde4::7:face route-map set-nexthop in
   exit-address-family
@@ -47,11 +100,22 @@ router bgp 65005
   neighbor fde4:5:1100::0071 remote-as 64513
   address-family ipv6 unicast
     network fde4:5::/32
+    neighbor fde4:5:1100::0071 route-map allow-own out
+    neighbor fde4:5:1100::0071 route-map NO-EXPORT out
+    neighbor fde4:5:1100::0071 route-map NO-ADVERTISE-E out
+    
+
+
+    neighbor fde4:5:1100::0071 route-map rm-in-c in
+    neighbor fde4:5:1100::0071 send-community
     neighbor fde4:5:1100::0071 activate
     neighbor fde4:5:1100::0071 route-map set-nexthop in
   exit-address-family
 
 
+  address-family ipv6 unicast
+    neighbor fde4:5:1100::0071 prefix-list ZCUST1--BR-eth0 in  
+  exit-address-family  
 
 
 !
@@ -59,23 +123,29 @@ router bgp 65005
 !
   bgp route-reflector allow-outbound-policy
   !
+  neighbor fde4:5:2100::0003 send-community
+  neighbor fde4:5:2100::0003 route-map NO-ADVERTISE-I out
+      
   neighbor fde4:5:2100::0003 remote-as 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
     !neighbor fde4:5:2100::0003 route-map set-nexthop out
     !neighbor fde4:5:2100::0003 route-map set-nexthop in
-    neighbor fde4:5:2100::0003 password ihvxuusysp
+    neighbor fde4:5:2100::0003 password keyhsrikem
   exit-address-family
 
   !
+  neighbor fde4:5:2100::0004 send-community
+  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
+      
   neighbor fde4:5:2100::0004 remote-as 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
     !neighbor fde4:5:2100::0004 route-map set-nexthop out
     !neighbor fde4:5:2100::0004 route-map set-nexthop in
-    neighbor fde4:5:2100::0004 password jbadxzfoax
+    neighbor fde4:5:2100::0004 password cvlqgpiigz
   exit-address-family
 
   !
@@ -87,3 +157,69 @@ router bgp 65005
 
  
 !
+!	Route Maps
+!
+   
+   bgp community-list set-local-pref-70-community permit 65005:170
+   bgp community-list set50-local-pref-80-community permit 65005:180
+   bgp community-list set-local-pref-90-community permit 65005:190
+   bgp community-list no-export-community permit 65005:60
+   bgp community-list no-advertise-community permit 65005:70
+   bgp community-list client-community permit 65005:10
+
+   route-map rm-in-sc permit 10
+     set community 65005:30
+
+   route-map set-local-pref-60 permit 10
+     match community set-local-pref-70-community
+     set local-preference 60
+
+   route-map set-local-pref-70 permit 11
+     match community set-local-pref-80-community
+     set local-preference 70
+
+   route-map set-local-pref-80 permit 12
+     match community set-local-pref-90-community
+     set local-preference 80
+
+   route-map NO-ADVERTISE-E deny 13
+     match community no-advertise-community
+   route-map NO-ADVERTISE-E permit 14
+
+   route-map NO-ADVERISE-I deny 15
+     match community no-advertise-community
+   route-map NO-ADVERTISE-I permit 16
+
+
+   route-map rm-out-sc-p-allow-client permit 17
+     match community client-community
+
+   route-map rm-out-sc-p-allow-own permit 18
+     match ipv6 prefix-list ours
+
+
+
+   route-map NO-EXPORT deny 19
+     match community no-export-community
+   route-map NO-EXPORT permit 20
+
+   route-map rm-in-p permit 21
+     set community 65005:40
+
+
+   route-map rm-in-pb permit 22
+     set local-preference 70
+     set community 65005:50
+
+
+   bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
+   
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+   
