--- a/isp/P2-BR/p2-br_bgp.conf
+++ b/isp/P2-BR/p2-br_bgp.conf
@@ -2,12 +2,15 @@ log stdout
 debug bgp zebra
 debug bgp neighbor-events
 !
+
 router bgp 65005
   bgp router-id 20.20.0.3
   no bgp default ipv4-unicast
 !
 !	eBGP
 !
+
+ ipv6 prefix-list ours fde4:5::/32
 
 
 
@@ -16,19 +19,25 @@ router bgp 65005
 !
   bgp route-reflector allow-outbound-policy
   !
+  neighbor fde4:5:2100::0003 send-community
+  neighbor fde4:5:2100::0003 route-map NO-ADVERTISE-I out
+      
   neighbor fde4:5:2100::0003 remote-as 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password pdioroqtie
+    neighbor fde4:5:2100::0003 password tlvyvhedoi
   exit-address-family
 
   !
+  neighbor fde4:5:2100::0004 send-community
+  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
+      
   neighbor fde4:5:2100::0004 remote-as 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password cfhwtnolsj
+    neighbor fde4:5:2100::0004 password dsfjpptfaw
   exit-address-family
 
   !
@@ -40,3 +49,69 @@ router bgp 65005
 
  
 !
+!	Route Maps
+!
+   
+   bgp community-list set-local-pref-70-community permit 65005:170
+   bgp community-list set50-local-pref-80-community permit 65005:180
+   bgp community-list set-local-pref-90-community permit 65005:190
+   bgp community-list no-export-community permit 65005:60
+   bgp community-list no-advertise-community permit 65005:70
+   bgp community-list client-community permit 65005:10
+
+   route-map rm-in-sc permit 10
+     set community 65005:30
+
+   route-map set-local-pref-60 permit 10
+     match community set-local-pref-70-community
+     set local-preference 60
+
+   route-map set-local-pref-70 permit 11
+     match community set-local-pref-80-community
+     set local-preference 70
+
+   route-map set-local-pref-80 permit 12
+     match community set-local-pref-90-community
+     set local-preference 80
+
+   route-map NO-ADVERTISE-E deny 13
+     match community no-advertise-community
+   route-map NO-ADVERTISE-E permit 14
+
+   route-map NO-ADVERISE-I deny 15
+     match community no-advertise-community
+   route-map NO-ADVERTISE-I permit 16
+
+
+   route-map rm-out-sc-p-allow-client permit 17
+     match community client-community
+
+   route-map rm-out-sc-p-allow-own permit 18
+     match ipv6 prefix-list ours
+
+
+
+   route-map NO-EXPORT deny 19
+     match community no-export-community
+   route-map NO-EXPORT permit 20
+
+   route-map rm-in-p permit 21
+     set community 65005:40
+
+
+   route-map rm-in-pb permit 22
+     set local-preference 70
+     set community 65005:50
+
+
+   bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
+   
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+   
