--- a/isp/P3-BR/p3-br_bgp.conf
+++ b/isp/P3-BR/p3-br_bgp.conf
@@ -27,7 +27,7 @@ router bgp 65005
     neighbor fde4:5:2100::0001 activate
     neighbor fde4:5:2100::0001 route-reflector-client
     neighbor fde4:5:2100::0001 update-source lo
-    neighbor fde4:5:2100::0001 password keyhsrikem
+    neighbor fde4:5:2100::0001 password kbhzkyyudo
   exit-address-family
 
   !
@@ -39,7 +39,7 @@ router bgp 65005
     neighbor fde4:5:2100::0002 activate
     neighbor fde4:5:2100::0002 route-reflector-client
     neighbor fde4:5:2100::0002 update-source lo
-    neighbor fde4:5:2100::0002 password tlvyvhedoi
+    neighbor fde4:5:2100::0002 password cskphbyvwq
   exit-address-family
 
   !
@@ -51,7 +51,7 @@ router bgp 65005
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 route-reflector-client
     neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password lsddpwlftp
+    neighbor fde4:5:2100::0004 password bbmclhrqkp
   exit-address-family
 
   !
@@ -63,7 +63,7 @@ router bgp 65005
     neighbor fde4:5:2200::0001 activate
     neighbor fde4:5:2200::0001 route-reflector-client
     neighbor fde4:5:2200::0001 update-source lo
-    neighbor fde4:5:2200::0001 password kdtdjhgrtt
+    neighbor fde4:5:2200::0001 password jyhbjbvhjx
   exit-address-family
 
   !
@@ -75,7 +75,7 @@ router bgp 65005
     neighbor fde4:5:2200::0002 activate
     neighbor fde4:5:2200::0002 route-reflector-client
     neighbor fde4:5:2200::0002 update-source lo
-    neighbor fde4:5:2200::0002 password kmyypcbsnb
+    neighbor fde4:5:2200::0002 password qwuymajxmw
   exit-address-family
 
   !
@@ -87,7 +87,7 @@ router bgp 65005
     neighbor fde4:5:2300::0001 activate
     neighbor fde4:5:2300::0001 route-reflector-client
     neighbor fde4:5:2300::0001 update-source lo
-    neighbor fde4:5:2300::0001 password fdbamklxbl
+    neighbor fde4:5:2300::0001 password uubhuoqrmp
   exit-address-family
 
   !
@@ -99,7 +99,7 @@ router bgp 65005
     neighbor fde4:5:2300::0002 activate
     neighbor fde4:5:2300::0002 route-reflector-client
     neighbor fde4:5:2300::0002 update-source lo
-    neighbor fde4:5:2300::0002 password quqsdeofgf
+    neighbor fde4:5:2300::0002 password fijkvotogd
   exit-address-family
 
   !
@@ -111,7 +111,7 @@ router bgp 65005
     neighbor fde4:5:2400::0001 activate
     neighbor fde4:5:2400::0001 route-reflector-client
     neighbor fde4:5:2400::0001 update-source lo
-    neighbor fde4:5:2400::0001 password alwqwzrgkq
+    neighbor fde4:5:2400::0001 password yokclnhjja
   exit-address-family
 
   !
@@ -123,7 +123,7 @@ router bgp 65005
     neighbor fde4:5:2400::0002 activate
     neighbor fde4:5:2400::0002 route-reflector-client
     neighbor fde4:5:2400::0002 update-source lo
-    neighbor fde4:5:2400::0002 password xgidxpestt
+    neighbor fde4:5:2400::0002 password xvarspyjeg
   exit-address-family
 
   !
@@ -135,7 +135,7 @@ router bgp 65005
     neighbor fde4:5:2500::0001 activate
     neighbor fde4:5:2500::0001 route-reflector-client
     neighbor fde4:5:2500::0001 update-source lo
-    neighbor fde4:5:2500::0001 password gpwywollei
+    neighbor fde4:5:2500::0001 password gbzvgfarpn
   exit-address-family
 
   !
@@ -147,7 +147,7 @@ router bgp 65005
     neighbor fde4:5:2500::0002 activate
     neighbor fde4:5:2500::0002 route-reflector-client
     neighbor fde4:5:2500::0002 update-source lo
-    neighbor fde4:5:2500::0002 password ircdecxqzi
+    neighbor fde4:5:2500::0002 password uizppcghda
   exit-address-family
 
   !
@@ -159,7 +159,7 @@ router bgp 65005
     neighbor fde4:5:2600::0001 activate
     neighbor fde4:5:2600::0001 route-reflector-client
     neighbor fde4:5:2600::0001 update-source lo
-    neighbor fde4:5:2600::0001 password hujtmfwkjt
+    neighbor fde4:5:2600::0001 password wlaufpomxx
   exit-address-family
 
   !
@@ -171,7 +171,7 @@ router bgp 65005
     neighbor fde4:5:2600::0002 activate
     neighbor fde4:5:2600::0002 route-reflector-client
     neighbor fde4:5:2600::0002 update-source lo
-    neighbor fde4:5:2600::0002 password zkymkvasdq
+    neighbor fde4:5:2600::0002 password peygkktxkb
   exit-address-family
 
   !
@@ -183,7 +183,7 @@ router bgp 65005
     neighbor fde4:5:2700::0001 activate
     neighbor fde4:5:2700::0001 route-reflector-client
     neighbor fde4:5:2700::0001 update-source lo
-    neighbor fde4:5:2700::0001 password jykdrewtcn
+    neighbor fde4:5:2700::0001 password zjdxleufgp
   exit-address-family
 
   !
@@ -195,7 +195,7 @@ router bgp 65005
     neighbor fde4:5:2700::0002 activate
     neighbor fde4:5:2700::0002 route-reflector-client
     neighbor fde4:5:2700::0002 update-source lo
-    neighbor fde4:5:2700::0002 password iwgsffdylu
+    neighbor fde4:5:2700::0002 password aejhpqhbkn
   exit-address-family
 
   !
@@ -215,10 +215,25 @@ router bgp 65005
    bgp community-list set-local-pref-90-community permit 65005:190
    bgp community-list no-export-community permit 65005:60
    bgp community-list no-advertise-community permit 65005:70
-   bgp community-list client-community permit 65005:10
+   bgp community-list client-community permit 65005:10 65005:20
+
+! Set community on ingress
 
    route-map rm-in-sc permit 10
      set community 65005:30
+
+ 
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+  
+
+! Set local pref on match
 
    route-map set-local-pref-60 permit 10
      match community set-local-pref-70-community
@@ -232,6 +247,8 @@ router bgp 65005
      match community set-local-pref-90-community
      set local-preference 80
 
+! Block on match
+
    route-map NO-ADVERTISE-E deny 13
      match community no-advertise-community
    route-map NO-ADVERTISE-E permit 14
@@ -241,13 +258,13 @@ router bgp 65005
    route-map NO-ADVERTISE-I permit 16
 
 
-   route-map rm-out-sc-p-allow-client permit 17
-     match community client-community
+! Allow on own prefix
 
    route-map rm-out-sc-p-allow-own permit 18
      match ipv6 prefix-list ours
 
 
+! Block EBGP on match
 
    route-map NO-EXPORT deny 19
      match community no-export-community
@@ -263,13 +280,5 @@ router bgp 65005
 
 
    bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
-   
-   route-map rm-in-c permit 23
-     set community 65005:10
-     
-   
-   route-map rm-in-cb permit 24
-    set local-preference 70
-    set community 65005:20
-
-   
+ 
+ 
