--- a/isp/P1-BR/p1-br_bgp.conf
+++ b/isp/P1-BR/p1-br_bgp.conf
@@ -15,9 +15,6 @@ router bgp 65005
   neighbor fde4::1 remote-as 64512
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4::1 route-map allow-own out
-    neighbor fde4::1 route-map NO-EXPORT out
-    neighbor fde4::1 route-map NO-ADVERTISE-E out
     
 
 
@@ -33,15 +30,12 @@ router bgp 65005
   neighbor fde4:5:3000:1::1 remote-as 65001
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4:5:3000:1::1 route-map allow-own out
-    neighbor fde4:5:3000:1::1 route-map NO-EXPORT out
-    neighbor fde4:5:3000:1::1 route-map NO-ADVERTISE-E out
     
 
 
     neighbor fde4:5:3000:1::1 route-map rm-in-sc in
     neighbor fde4:5:3000:1::1 route-map rm-out-sc-p-allow-own out
-    neighbor fde4:5:3000:1::1 route-map rm-out-sc-p-allow-client out
+
 
     neighbor fde4:5:3000:1::1 send-community
     neighbor fde4:5:3000:1::1 activate
@@ -52,9 +46,6 @@ router bgp 65005
   neighbor fde4::6:deaf remote-as 65006
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4::6:deaf route-map allow-own out
-    neighbor fde4::6:deaf route-map NO-EXPORT out
-    neighbor fde4::6:deaf route-map NO-ADVERTISE-E out
     
 
 
@@ -70,9 +61,6 @@ router bgp 65005
   neighbor fde4:4:f001:5::beef remote-as 65004
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4:4:f001:5::beef route-map allow-own out
-    neighbor fde4:4:f001:5::beef route-map NO-EXPORT out
-    neighbor fde4:4:f001:5::beef route-map NO-ADVERTISE-E out
     
 
 
@@ -85,9 +73,6 @@ router bgp 65005
   neighbor fde4::7:face remote-as 65007
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4::7:face route-map allow-own out
-    neighbor fde4::7:face route-map NO-EXPORT out
-    neighbor fde4::7:face route-map NO-ADVERTISE-E out
     
 
 
@@ -100,9 +85,6 @@ router bgp 65005
   neighbor fde4:5:1100::0071 remote-as 64513
   address-family ipv6 unicast
     network fde4:5::/32
-    neighbor fde4:5:1100::0071 route-map allow-own out
-    neighbor fde4:5:1100::0071 route-map NO-EXPORT out
-    neighbor fde4:5:1100::0071 route-map NO-ADVERTISE-E out
     
 
 
@@ -132,7 +114,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 update-source lo
     !neighbor fde4:5:2100::0003 route-map set-nexthop out
     !neighbor fde4:5:2100::0003 route-map set-nexthop in
-    neighbor fde4:5:2100::0003 password keyhsrikem
+    neighbor fde4:5:2100::0003 password kbhzkyyudo
   exit-address-family
 
   !
@@ -145,7 +127,7 @@ router bgp 65005
     neighbor fde4:5:2100::0004 update-source lo
     !neighbor fde4:5:2100::0004 route-map set-nexthop out
     !neighbor fde4:5:2100::0004 route-map set-nexthop in
-    neighbor fde4:5:2100::0004 password cvlqgpiigz
+    neighbor fde4:5:2100::0004 password ptymqtndxl
   exit-address-family
 
   !
@@ -165,10 +147,25 @@ router bgp 65005
    bgp community-list set-local-pref-90-community permit 65005:190
    bgp community-list no-export-community permit 65005:60
    bgp community-list no-advertise-community permit 65005:70
-   bgp community-list client-community permit 65005:10
+   bgp community-list client-community permit 65005:10 65005:20
+
+! Set community on ingress
 
    route-map rm-in-sc permit 10
      set community 65005:30
+
+ 
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+  
+
+! Set local pref on match
 
    route-map set-local-pref-60 permit 10
      match community set-local-pref-70-community
@@ -182,6 +179,8 @@ router bgp 65005
      match community set-local-pref-90-community
      set local-preference 80
 
+! Block on match
+
    route-map NO-ADVERTISE-E deny 13
      match community no-advertise-community
    route-map NO-ADVERTISE-E permit 14
@@ -191,13 +190,13 @@ router bgp 65005
    route-map NO-ADVERTISE-I permit 16
 
 
-   route-map rm-out-sc-p-allow-client permit 17
-     match community client-community
+! Allow on own prefix
 
    route-map rm-out-sc-p-allow-own permit 18
      match ipv6 prefix-list ours
 
 
+! Block EBGP on match
 
    route-map NO-EXPORT deny 19
      match community no-export-community
@@ -213,13 +212,5 @@ router bgp 65005
 
 
    bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
-   
-   route-map rm-in-c permit 23
-     set community 65005:10
-     
-   
-   route-map rm-in-cb permit 24
-    set local-preference 70
-    set community 65005:20
-
-   
+ 
+ 
