--- a/isp/P2-BR/p2-br_bgp.conf
+++ b/isp/P2-BR/p2-br_bgp.conf
@@ -26,7 +26,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password tlvyvhedoi
+    neighbor fde4:5:2100::0003 password cskphbyvwq
   exit-address-family
 
   !
@@ -37,7 +37,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password dsfjpptfaw
+    neighbor fde4:5:2100::0004 password xrfumadxpk
   exit-address-family
 
   !
@@ -57,10 +57,25 @@ router bgp 65005
    bgp community-list set-local-pref-90-community permit 65005:190
    bgp community-list no-export-community permit 65005:60
    bgp community-list no-advertise-community permit 65005:70
-   bgp community-list client-community permit 65005:10
+   bgp community-list client-community permit 65005:10 65005:20
+
+! Set community on ingress
 
    route-map rm-in-sc permit 10
      set community 65005:30
+
+ 
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+  
+
+! Set local pref on match
 
    route-map set-local-pref-60 permit 10
      match community set-local-pref-70-community
@@ -74,6 +89,8 @@ router bgp 65005
      match community set-local-pref-90-community
      set local-preference 80
 
+! Block on match
+
    route-map NO-ADVERTISE-E deny 13
      match community no-advertise-community
    route-map NO-ADVERTISE-E permit 14
@@ -83,13 +100,13 @@ router bgp 65005
    route-map NO-ADVERTISE-I permit 16
 
 
-   route-map rm-out-sc-p-allow-client permit 17
-     match community client-community
+! Allow on own prefix
 
    route-map rm-out-sc-p-allow-own permit 18
      match ipv6 prefix-list ours
 
 
+! Block EBGP on match
 
    route-map NO-EXPORT deny 19
      match community no-export-community
@@ -105,13 +122,5 @@ router bgp 65005
 
 
    bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
-   
-   route-map rm-in-c permit 23
-     set community 65005:10
-     
-   
-   route-map rm-in-cb permit 24
-    set local-preference 70
-    set community 65005:20
-
-   
+ 
+ 
