--- a/isp/P4-BR/p4-br_bgp.conf
+++ b/isp/P4-BR/p4-br_bgp.conf
@@ -27,7 +27,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 route-reflector-client
     neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password lsddpwlftp
+    neighbor fde4:5:2100::0003 password bbmclhrqkp
   exit-address-family
 
   !
@@ -39,7 +39,7 @@ router bgp 65005
     neighbor fde4:5:2100::0001 activate
     neighbor fde4:5:2100::0001 route-reflector-client
     neighbor fde4:5:2100::0001 update-source lo
-    neighbor fde4:5:2100::0001 password cvlqgpiigz
+    neighbor fde4:5:2100::0001 password ptymqtndxl
   exit-address-family
 
   !
@@ -51,7 +51,7 @@ router bgp 65005
     neighbor fde4:5:2100::0002 activate
     neighbor fde4:5:2100::0002 route-reflector-client
     neighbor fde4:5:2100::0002 update-source lo
-    neighbor fde4:5:2100::0002 password dsfjpptfaw
+    neighbor fde4:5:2100::0002 password xrfumadxpk
   exit-address-family
 
   !
@@ -63,7 +63,7 @@ router bgp 65005
     neighbor fde4:5:2200::0001 activate
     neighbor fde4:5:2200::0001 route-reflector-client
     neighbor fde4:5:2200::0001 update-source lo
-    neighbor fde4:5:2200::0001 password kxnqyttakv
+    neighbor fde4:5:2200::0001 password xahraaqzqc
   exit-address-family
 
   !
@@ -75,7 +75,7 @@ router bgp 65005
     neighbor fde4:5:2200::0002 activate
     neighbor fde4:5:2200::0002 route-reflector-client
     neighbor fde4:5:2200::0002 update-source lo
-    neighbor fde4:5:2200::0002 password owyvtgbhuz
+    neighbor fde4:5:2200::0002 password pdvlhujbpu
   exit-address-family
 
   !
@@ -87,7 +87,7 @@ router bgp 65005
     neighbor fde4:5:2300::0001 activate
     neighbor fde4:5:2300::0001 route-reflector-client
     neighbor fde4:5:2300::0001 update-source lo
-    neighbor fde4:5:2300::0001 password ywsvfhmxxa
+    neighbor fde4:5:2300::0001 password lhhikhbhfq
   exit-address-family
 
   !
@@ -99,7 +99,7 @@ router bgp 65005
     neighbor fde4:5:2300::0002 activate
     neighbor fde4:5:2300::0002 route-reflector-client
     neighbor fde4:5:2300::0002 update-source lo
-    neighbor fde4:5:2300::0002 password pbmlqpitrn
+    neighbor fde4:5:2300::0002 password ollyewinbx
   exit-address-family
 
   !
@@ -111,7 +111,7 @@ router bgp 65005
     neighbor fde4:5:2400::0001 activate
     neighbor fde4:5:2400::0001 route-reflector-client
     neighbor fde4:5:2400::0001 update-source lo
-    neighbor fde4:5:2400::0001 password krvyyxhoyz
+    neighbor fde4:5:2400::0001 password kspjoojgeu
   exit-address-family
 
   !
@@ -123,7 +123,7 @@ router bgp 65005
     neighbor fde4:5:2400::0002 activate
     neighbor fde4:5:2400::0002 route-reflector-client
     neighbor fde4:5:2400::0002 update-source lo
-    neighbor fde4:5:2400::0002 password nnekcabmji
+    neighbor fde4:5:2400::0002 password xcygppbjnr
   exit-address-family
 
   !
@@ -135,7 +135,7 @@ router bgp 65005
     neighbor fde4:5:2500::0001 activate
     neighbor fde4:5:2500::0001 route-reflector-client
     neighbor fde4:5:2500::0001 update-source lo
-    neighbor fde4:5:2500::0001 password fkduzttuio
+    neighbor fde4:5:2500::0001 password ipjnkdbpkz
   exit-address-family
 
   !
@@ -147,7 +147,7 @@ router bgp 65005
     neighbor fde4:5:2500::0002 activate
     neighbor fde4:5:2500::0002 route-reflector-client
     neighbor fde4:5:2500::0002 update-source lo
-    neighbor fde4:5:2500::0002 password saeaxquheb
+    neighbor fde4:5:2500::0002 password akopcwwlgq
   exit-address-family
 
   !
@@ -159,7 +159,7 @@ router bgp 65005
     neighbor fde4:5:2600::0001 activate
     neighbor fde4:5:2600::0001 route-reflector-client
     neighbor fde4:5:2600::0001 update-source lo
-    neighbor fde4:5:2600::0001 password jtvzdubjza
+    neighbor fde4:5:2600::0001 password httmmslmkt
   exit-address-family
 
   !
@@ -171,7 +171,7 @@ router bgp 65005
     neighbor fde4:5:2600::0002 activate
     neighbor fde4:5:2600::0002 route-reflector-client
     neighbor fde4:5:2600::0002 update-source lo
-    neighbor fde4:5:2600::0002 password dewsauiilm
+    neighbor fde4:5:2600::0002 password lqhhooaxtx
   exit-address-family
 
   !
@@ -183,7 +183,7 @@ router bgp 65005
     neighbor fde4:5:2700::0001 activate
     neighbor fde4:5:2700::0001 route-reflector-client
     neighbor fde4:5:2700::0001 update-source lo
-    neighbor fde4:5:2700::0001 password ozddzlphps
+    neighbor fde4:5:2700::0001 password gwtupsohlw
   exit-address-family
 
   !
@@ -195,7 +195,7 @@ router bgp 65005
     neighbor fde4:5:2700::0002 activate
     neighbor fde4:5:2700::0002 route-reflector-client
     neighbor fde4:5:2700::0002 update-source lo
-    neighbor fde4:5:2700::0002 password dtwcgfamcq
+    neighbor fde4:5:2700::0002 password alfucascwd
   exit-address-family
 
   !
@@ -215,10 +215,25 @@ router bgp 65005
    bgp community-list set-local-pref-90-community permit 65005:190
    bgp community-list no-export-community permit 65005:60
    bgp community-list no-advertise-community permit 65005:70
-   bgp community-list client-community permit 65005:10
+   bgp community-list client-community permit 65005:10 65005:20
+
+! Set community on ingress
 
    route-map rm-in-sc permit 10
      set community 65005:30
+
+ 
+   route-map rm-in-c permit 23
+     set community 65005:10
+     
+   
+   route-map rm-in-cb permit 24
+    set local-preference 70
+    set community 65005:20
+
+  
+
+! Set local pref on match
 
    route-map set-local-pref-60 permit 10
      match community set-local-pref-70-community
@@ -232,6 +247,8 @@ router bgp 65005
      match community set-local-pref-90-community
      set local-preference 80
 
+! Block on match
+
    route-map NO-ADVERTISE-E deny 13
      match community no-advertise-community
    route-map NO-ADVERTISE-E permit 14
@@ -241,13 +258,13 @@ router bgp 65005
    route-map NO-ADVERTISE-I permit 16
 
 
-   route-map rm-out-sc-p-allow-client permit 17
-     match community client-community
+! Allow on own prefix
 
    route-map rm-out-sc-p-allow-own permit 18
      match ipv6 prefix-list ours
 
 
+! Block EBGP on match
 
    route-map NO-EXPORT deny 19
      match community no-export-community
@@ -263,13 +280,5 @@ router bgp 65005
 
 
    bgp community-list allow-all permit 65005:10 65005:20 65005:30 65005:40 65005:50
-   
-   route-map rm-in-c permit 23
-     set community 65005:10
-     
-   
-   route-map rm-in-cb permit 24
-    set local-preference 70
-    set community 65005:20
-
-   
+ 
+ 
