--- a/isp/P13-WF/p13-wf_bgp.conf
+++ b/isp/P13-WF/p13-wf_bgp.conf
@@ -26,18 +26,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0003 activate
     neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password nbtsyvxrtd
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0004 send-community
-  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0004 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0004 activate
-    neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password skqazkiuuv
+    neighbor fde4:5:2100::0003 password xobhgumxww
   exit-address-family
 
   !
