--- a/isp/P3-BR/p3-br_bgp.conf
+++ b/isp/P3-BR/p3-br_bgp.conf
@@ -27,31 +27,7 @@ router bgp 65005
     neighbor fde4:5:2100::0001 activate
     neighbor fde4:5:2100::0001 route-reflector-client
     neighbor fde4:5:2100::0001 update-source lo
-    neighbor fde4:5:2100::0001 password wsaifxaeui
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0002 send-community
-  neighbor fde4:5:2100::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0002 activate
-    neighbor fde4:5:2100::0002 route-reflector-client
-    neighbor fde4:5:2100::0002 update-source lo
-    neighbor fde4:5:2100::0002 password lejdmkhlxg
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0004 send-community
-  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0004 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0004 activate
-    neighbor fde4:5:2100::0004 route-reflector-client
-    neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password kuerszmdju
+    neighbor fde4:5:2100::0001 password hutelhnapn
   exit-address-family
 
   !
@@ -63,19 +39,7 @@ router bgp 65005
     neighbor fde4:5:2200::0001 activate
     neighbor fde4:5:2200::0001 route-reflector-client
     neighbor fde4:5:2200::0001 update-source lo
-    neighbor fde4:5:2200::0001 password hcsmhxysjf
-  exit-address-family
-
-  !
-  neighbor fde4:5:2200::0002 send-community
-  neighbor fde4:5:2200::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2200::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2200::0002 activate
-    neighbor fde4:5:2200::0002 route-reflector-client
-    neighbor fde4:5:2200::0002 update-source lo
-    neighbor fde4:5:2200::0002 password bfzokadcgx
+    neighbor fde4:5:2200::0001 password hxrwtkqiig
   exit-address-family
 
   !
@@ -87,19 +51,7 @@ router bgp 65005
     neighbor fde4:5:2300::0001 activate
     neighbor fde4:5:2300::0001 route-reflector-client
     neighbor fde4:5:2300::0001 update-source lo
-    neighbor fde4:5:2300::0001 password qxgxxyvpmn
-  exit-address-family
-
-  !
-  neighbor fde4:5:2300::0002 send-community
-  neighbor fde4:5:2300::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2300::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2300::0002 activate
-    neighbor fde4:5:2300::0002 route-reflector-client
-    neighbor fde4:5:2300::0002 update-source lo
-    neighbor fde4:5:2300::0002 password vsjkmxhaty
+    neighbor fde4:5:2300::0001 password zwlcxgskpj
   exit-address-family
 
   !
@@ -111,19 +63,7 @@ router bgp 65005
     neighbor fde4:5:2400::0001 activate
     neighbor fde4:5:2400::0001 route-reflector-client
     neighbor fde4:5:2400::0001 update-source lo
-    neighbor fde4:5:2400::0001 password tojiwktrhq
-  exit-address-family
-
-  !
-  neighbor fde4:5:2400::0002 send-community
-  neighbor fde4:5:2400::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2400::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2400::0002 activate
-    neighbor fde4:5:2400::0002 route-reflector-client
-    neighbor fde4:5:2400::0002 update-source lo
-    neighbor fde4:5:2400::0002 password vvxnycircj
+    neighbor fde4:5:2400::0001 password dwbvgsvgvm
   exit-address-family
 
   !
@@ -135,19 +75,7 @@ router bgp 65005
     neighbor fde4:5:2500::0001 activate
     neighbor fde4:5:2500::0001 route-reflector-client
     neighbor fde4:5:2500::0001 update-source lo
-    neighbor fde4:5:2500::0001 password mszryegqtp
-  exit-address-family
-
-  !
-  neighbor fde4:5:2500::0002 send-community
-  neighbor fde4:5:2500::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2500::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2500::0002 activate
-    neighbor fde4:5:2500::0002 route-reflector-client
-    neighbor fde4:5:2500::0002 update-source lo
-    neighbor fde4:5:2500::0002 password tseefcfidt
+    neighbor fde4:5:2500::0001 password qwbsrpnhyj
   exit-address-family
 
   !
@@ -159,19 +87,7 @@ router bgp 65005
     neighbor fde4:5:2600::0001 activate
     neighbor fde4:5:2600::0001 route-reflector-client
     neighbor fde4:5:2600::0001 update-source lo
-    neighbor fde4:5:2600::0001 password nbtsyvxrtd
-  exit-address-family
-
-  !
-  neighbor fde4:5:2600::0002 send-community
-  neighbor fde4:5:2600::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2600::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2600::0002 activate
-    neighbor fde4:5:2600::0002 route-reflector-client
-    neighbor fde4:5:2600::0002 update-source lo
-    neighbor fde4:5:2600::0002 password bdrdopfvkd
+    neighbor fde4:5:2600::0001 password xobhgumxww
   exit-address-family
 
   !
@@ -183,19 +99,7 @@ router bgp 65005
     neighbor fde4:5:2700::0001 activate
     neighbor fde4:5:2700::0001 route-reflector-client
     neighbor fde4:5:2700::0001 update-source lo
-    neighbor fde4:5:2700::0001 password kgzphmingg
-  exit-address-family
-
-  !
-  neighbor fde4:5:2700::0002 send-community
-  neighbor fde4:5:2700::0002 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2700::0002 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2700::0002 activate
-    neighbor fde4:5:2700::0002 route-reflector-client
-    neighbor fde4:5:2700::0002 update-source lo
-    neighbor fde4:5:2700::0002 password xunnyxshew
+    neighbor fde4:5:2700::0001 password nlhxxdjqit
   exit-address-family
 
   !
