--- a/isp/P4-BR/p4-br_bgp.conf
+++ b/isp/P4-BR/p4-br_bgp.conf
@@ -19,30 +19,6 @@ router bgp 65005
 !
   bgp route-reflector allow-outbound-policy
   !
-  neighbor fde4:5:2100::0003 send-community
-  neighbor fde4:5:2100::0003 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0003 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0003 activate
-    neighbor fde4:5:2100::0003 route-reflector-client
-    neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password kuerszmdju
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0001 send-community
-  neighbor fde4:5:2100::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0001 activate
-    neighbor fde4:5:2100::0001 route-reflector-client
-    neighbor fde4:5:2100::0001 update-source lo
-    neighbor fde4:5:2100::0001 password okfwjuoqaz
-  exit-address-family
-
-  !
   neighbor fde4:5:2100::0002 send-community
   neighbor fde4:5:2100::0002 route-map NO-ADVERTISE-I out
       
@@ -51,19 +27,7 @@ router bgp 65005
     neighbor fde4:5:2100::0002 activate
     neighbor fde4:5:2100::0002 route-reflector-client
     neighbor fde4:5:2100::0002 update-source lo
-    neighbor fde4:5:2100::0002 password jwvnjjllah
-  exit-address-family
-
-  !
-  neighbor fde4:5:2200::0001 send-community
-  neighbor fde4:5:2200::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2200::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2200::0001 activate
-    neighbor fde4:5:2200::0001 route-reflector-client
-    neighbor fde4:5:2200::0001 update-source lo
-    neighbor fde4:5:2200::0001 password kvxthoptnt
+    neighbor fde4:5:2100::0002 password xbjlitsnlf
   exit-address-family
 
   !
@@ -75,19 +39,7 @@ router bgp 65005
     neighbor fde4:5:2200::0002 activate
     neighbor fde4:5:2200::0002 route-reflector-client
     neighbor fde4:5:2200::0002 update-source lo
-    neighbor fde4:5:2200::0002 password dapeqianav
-  exit-address-family
-
-  !
-  neighbor fde4:5:2300::0001 send-community
-  neighbor fde4:5:2300::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2300::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2300::0001 activate
-    neighbor fde4:5:2300::0001 route-reflector-client
-    neighbor fde4:5:2300::0001 update-source lo
-    neighbor fde4:5:2300::0001 password oeoxksjvoz
+    neighbor fde4:5:2200::0002 password avtfymbqok
   exit-address-family
 
   !
@@ -99,19 +51,7 @@ router bgp 65005
     neighbor fde4:5:2300::0002 activate
     neighbor fde4:5:2300::0002 route-reflector-client
     neighbor fde4:5:2300::0002 update-source lo
-    neighbor fde4:5:2300::0002 password efxnfrlyqw
-  exit-address-family
-
-  !
-  neighbor fde4:5:2400::0001 send-community
-  neighbor fde4:5:2400::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2400::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2400::0001 activate
-    neighbor fde4:5:2400::0001 route-reflector-client
-    neighbor fde4:5:2400::0001 update-source lo
-    neighbor fde4:5:2400::0001 password xklmuyneqs
+    neighbor fde4:5:2300::0002 password tjzcrlukiq
   exit-address-family
 
   !
@@ -123,19 +63,7 @@ router bgp 65005
     neighbor fde4:5:2400::0002 activate
     neighbor fde4:5:2400::0002 route-reflector-client
     neighbor fde4:5:2400::0002 update-source lo
-    neighbor fde4:5:2400::0002 password tsvdermegp
-  exit-address-family
-
-  !
-  neighbor fde4:5:2500::0001 send-community
-  neighbor fde4:5:2500::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2500::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2500::0001 activate
-    neighbor fde4:5:2500::0001 route-reflector-client
-    neighbor fde4:5:2500::0001 update-source lo
-    neighbor fde4:5:2500::0001 password hxvsocvldn
+    neighbor fde4:5:2400::0002 password stoeacjdph
   exit-address-family
 
   !
@@ -147,19 +75,7 @@ router bgp 65005
     neighbor fde4:5:2500::0002 activate
     neighbor fde4:5:2500::0002 route-reflector-client
     neighbor fde4:5:2500::0002 update-source lo
-    neighbor fde4:5:2500::0002 password rhgosefpdi
-  exit-address-family
-
-  !
-  neighbor fde4:5:2600::0001 send-community
-  neighbor fde4:5:2600::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2600::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2600::0001 activate
-    neighbor fde4:5:2600::0001 route-reflector-client
-    neighbor fde4:5:2600::0001 update-source lo
-    neighbor fde4:5:2600::0001 password skqazkiuuv
+    neighbor fde4:5:2500::0002 password cctnhdogub
   exit-address-family
 
   !
@@ -171,19 +87,7 @@ router bgp 65005
     neighbor fde4:5:2600::0002 activate
     neighbor fde4:5:2600::0002 route-reflector-client
     neighbor fde4:5:2600::0002 update-source lo
-    neighbor fde4:5:2600::0002 password lxsyqbvstb
-  exit-address-family
-
-  !
-  neighbor fde4:5:2700::0001 send-community
-  neighbor fde4:5:2700::0001 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2700::0001 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2700::0001 activate
-    neighbor fde4:5:2700::0001 route-reflector-client
-    neighbor fde4:5:2700::0001 update-source lo
-    neighbor fde4:5:2700::0001 password wrlcnaqxrb
+    neighbor fde4:5:2600::0002 password rytgagnuof
   exit-address-family
 
   !
@@ -195,7 +99,7 @@ router bgp 65005
     neighbor fde4:5:2700::0002 activate
     neighbor fde4:5:2700::0002 route-reflector-client
     neighbor fde4:5:2700::0002 update-source lo
-    neighbor fde4:5:2700::0002 password sxspfxztrc
+    neighbor fde4:5:2700::0002 password ocvxxwfdzx
   exit-address-family
 
   !
