--- a/isp/P6-AT/p6-at_bgp.conf
+++ b/isp/P6-AT/p6-at_bgp.conf
@@ -19,17 +19,6 @@ router bgp 65005
 !
   bgp route-reflector allow-outbound-policy
   !
-  neighbor fde4:5:2100::0003 send-community
-  neighbor fde4:5:2100::0003 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0003 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0003 activate
-    neighbor fde4:5:2100::0003 update-source lo
-    neighbor fde4:5:2100::0003 password bfzokadcgx
-  exit-address-family
-
-  !
   neighbor fde4:5:2100::0004 send-community
   neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
       
@@ -37,7 +26,7 @@ router bgp 65005
   address-family ipv6 unicast
     neighbor fde4:5:2100::0004 activate
     neighbor fde4:5:2100::0004 update-source lo
-    neighbor fde4:5:2100::0004 password dapeqianav
+    neighbor fde4:5:2100::0004 password avtfymbqok
   exit-address-family
 
   !
