--- a/isp/P7-EF/p7-ef_bgp.conf
+++ b/isp/P7-EF/p7-ef_bgp.conf
@@ -43,20 +43,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 update-source lo
     !neighbor fde4:5:2100::0003 route-map set-nexthop out
     !neighbor fde4:5:2100::0003 route-map set-nexthop in
-    neighbor fde4:5:2100::0003 password qxgxxyvpmn
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0004 send-community
-  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0004 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0004 activate
-    neighbor fde4:5:2100::0004 update-source lo
-    !neighbor fde4:5:2100::0004 route-map set-nexthop out
-    !neighbor fde4:5:2100::0004 route-map set-nexthop in
-    neighbor fde4:5:2100::0004 password oeoxksjvoz
+    neighbor fde4:5:2100::0003 password zwlcxgskpj
   exit-address-family
 
   !
