--- a/isp/P1-BR/p1-br_bgp.conf
+++ b/isp/P1-BR/p1-br_bgp.conf
@@ -59,20 +59,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 update-source lo
     !neighbor fde4:5:2100::0003 route-map set-nexthop out
     !neighbor fde4:5:2100::0003 route-map set-nexthop in
-    neighbor fde4:5:2100::0003 password wsaifxaeui
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0004 send-community
-  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0004 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0004 activate
-    neighbor fde4:5:2100::0004 update-source lo
-    !neighbor fde4:5:2100::0004 route-map set-nexthop out
-    !neighbor fde4:5:2100::0004 route-map set-nexthop in
-    neighbor fde4:5:2100::0004 password okfwjuoqaz
+    neighbor fde4:5:2100::0003 password hutelhnapn
   exit-address-family
 
   !
