--- a/isp/P9-FB/p9-fb_bgp.conf
+++ b/isp/P9-FB/p9-fb_bgp.conf
@@ -40,20 +40,7 @@ router bgp 65005
     neighbor fde4:5:2100::0003 update-source lo
     !neighbor fde4:5:2100::0003 route-map set-nexthop out
     !neighbor fde4:5:2100::0003 route-map set-nexthop in
-    neighbor fde4:5:2100::0003 password tojiwktrhq
-  exit-address-family
-
-  !
-  neighbor fde4:5:2100::0004 send-community
-  neighbor fde4:5:2100::0004 route-map NO-ADVERTISE-I out
-      
-  neighbor fde4:5:2100::0004 remote-as 65005
-  address-family ipv6 unicast
-    neighbor fde4:5:2100::0004 activate
-    neighbor fde4:5:2100::0004 update-source lo
-    !neighbor fde4:5:2100::0004 route-map set-nexthop out
-    !neighbor fde4:5:2100::0004 route-map set-nexthop in
-    neighbor fde4:5:2100::0004 password xklmuyneqs
+    neighbor fde4:5:2100::0003 password dwbvgsvgvm
   exit-address-family
 
   !
